--- a/unicorn_contracts/package.json
+++ b/unicorn_contracts/package.json
@@ -17,10 +17,9 @@
   },
   "scripts": {
     "build": "sam build",
-    "unit": "jest --config=jest.config.test.unit.ts",
     "lint": "eslint '*.ts' --quiet --fix",
     "compile": "tsc",
-    "test": "jest",
+    "test": "make integration-test",
     "deploy": "sam build && sam deploy --no-confirm-changeset"
   },
   "devDependencies": {
