--- a/unicorn_properties/package.json
+++ b/unicorn_properties/package.json
@@ -14,10 +14,9 @@
     "esbuild": "^0.17.18"
   },
   "scripts": {
-    "unit": "jest --config=jest.config.test.unit.ts",
     "lint": "eslint '*.ts' --quiet --fix",
     "compile": "tsc",
-    "test": "jest",
+    "test": "make integration-test",
     "deploy": "sam build && sam deploy --no-confirm-changeset"
   },
   "devDependencies": {
