--- a/unicorn_shared/package.json
+++ b/unicorn_shared/package.json
@@ -14,6 +14,8 @@
   },
   "dependencies": {
     "aws-cdk-lib": "^2.128.0",
-    "constructs": "^10.3.0"
+    "cdk-nag": "^2.28.79",
+    "constructs": "^10.3.0",
+    "path": "^0.12.7"
   }
 }
